fixed spacing on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -324,6 +324,7 @@ td {
     header {
         margin: auto;
         width: 95%;
+        margin-top: 5%;
     }
 }
 
